# cspot

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
c-bindings/: CMakeLists.txt  Cargo.toml  cbindgen.toml
c-bindings/cmake/: Findcspot.cmake
c-bindings/include/: .gitignore
c-bindings/src/: android.rs  connect.rs  discovery.rs  error.rs  ffi.rs  lib.rs  logging.rs  playback.rs  runtime.rs  session.rs  uri.rs
samples/android-client/: CMakeLists.txt  README.md
samples/android-client/app/: build.gradle
samples/android-client/app/src/main/: AndroidManifest.xml
samples/android-client/app/src/main/cpp/: CMakeLists.txt  android_client_jni.cpp
samples/android-client/app/src/main/java/io/cspot/androidclient/: MainActivity.java  NativeBridge.java  PlaybackSnapshot.java
samples/android-client/app/src/main/res/layout/: activity_main.xml
samples/android-client/app/src/main/res/values/: strings.xml  themes.xml
samples/android-client/scripts/: build-android-client.sh
samples/cmake/: CspotAudio.cmake  CspotDependencies.cmake
samples/connect_playback/: CMakeLists.txt  CMakePresets.json
samples/connect_playback/src/: connect_playback.c
samples/discovery_playback/: CMakeLists.txt
samples/discovery_playback/src/: discovery_playback.c
samples/repl_app/: CMakeLists.txt
samples/repl_app/src/: repl_app.c
samples/simple_discovery/: CMakeLists.txt
samples/simple_discovery/src/: simple_discovery.c
scripts/: package-android-all.sh  setup.cmd  setup.sh
scripts/setup/: README.md  setup-linux.sh  setup-macos.sh  setup-windows.ps1
