cmake_minimum_required(VERSION 3.15)

if (CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_LIST_DIR)
  project(cspot C)
endif()

set(CMAKE_C_STANDARD 99)

set(CSPOT_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}")
set(CSPOT_INCLUDE_DIR "${CSPOT_SOURCE_DIR}/include")

if (NOT DEFINED CSPOT_CARGO_TARGET_DIR)
  set(CSPOT_CARGO_TARGET_DIR "${CMAKE_SOURCE_DIR}/artifacts/target")
endif()
if (NOT DEFINED CSPOT_INSTALL_INCLUDE_DIR)
  set(CSPOT_INSTALL_INCLUDE_DIR "include")
endif()
if (NOT DEFINED CSPOT_INSTALL_LIB_DIR)
  set(CSPOT_INSTALL_LIB_DIR "lib")
endif()

find_program(CBINDGEN_EXECUTABLE cbindgen REQUIRED)
find_program(CARGO_EXECUTABLE cargo REQUIRED)

set(CSPOT_CARGO_RELEASE_FLAG "")
if (CMAKE_BUILD_TYPE MATCHES "^(Release|RelWithDebInfo|MinSizeRel)$")
  set(CSPOT_CARGO_RELEASE_FLAG "--release")
endif()

set(CSPOT_CARGO_BUILD_CMD "${CARGO_EXECUTABLE}" build -p cspot --target-dir "${CSPOT_CARGO_TARGET_DIR}")
if (CSPOT_CARGO_RELEASE_FLAG)
  list(APPEND CSPOT_CARGO_BUILD_CMD "${CSPOT_CARGO_RELEASE_FLAG}")
endif()

if (CSPOT_CARGO_RELEASE_FLAG)
  set(CSPOT_CARGO_PROFILE "release")
else()
  set(CSPOT_CARGO_PROFILE "debug")
endif()

set(CSPOT_LIBRARY_DEBUG
  "${CSPOT_CARGO_TARGET_DIR}/debug/${CMAKE_SHARED_LIBRARY_PREFIX}cspot${CMAKE_SHARED_LIBRARY_SUFFIX}"
)
set(CSPOT_LIBRARY_RELEASE
  "${CSPOT_CARGO_TARGET_DIR}/release/${CMAKE_SHARED_LIBRARY_PREFIX}cspot${CMAKE_SHARED_LIBRARY_SUFFIX}"
)
set(CSPOT_STATIC_LIBRARY_DEBUG
  "${CSPOT_CARGO_TARGET_DIR}/debug/${CMAKE_STATIC_LIBRARY_PREFIX}cspot${CMAKE_STATIC_LIBRARY_SUFFIX}"
)
set(CSPOT_STATIC_LIBRARY_RELEASE
  "${CSPOT_CARGO_TARGET_DIR}/release/${CMAKE_STATIC_LIBRARY_PREFIX}cspot${CMAKE_STATIC_LIBRARY_SUFFIX}"
)
set(CSPOT_LIBRARY_OUTPUT
  "${CSPOT_CARGO_TARGET_DIR}/${CSPOT_CARGO_PROFILE}/${CMAKE_SHARED_LIBRARY_PREFIX}cspot${CMAKE_SHARED_LIBRARY_SUFFIX}"
)
set(CSPOT_STATIC_LIBRARY_OUTPUT
  "${CSPOT_CARGO_TARGET_DIR}/${CSPOT_CARGO_PROFILE}/${CMAKE_STATIC_LIBRARY_PREFIX}cspot${CMAKE_STATIC_LIBRARY_SUFFIX}"
)

file(GLOB_RECURSE CSPOT_RUST_SOURCES CONFIGURE_DEPENDS
  "${CSPOT_SOURCE_DIR}/src/*.rs"
)
set(CSPOT_HEADER_DEPENDS
  "${CSPOT_SOURCE_DIR}/Cargo.toml"
  "${CSPOT_SOURCE_DIR}/Cargo.lock"
  "${CSPOT_SOURCE_DIR}/cbindgen.toml"
  ${CSPOT_RUST_SOURCES}
)

add_custom_command(
  OUTPUT
    "${CSPOT_INCLUDE_DIR}/cspot.h"
    "${CSPOT_LIBRARY_OUTPUT}"
    "${CSPOT_STATIC_LIBRARY_OUTPUT}"
  COMMAND "${CMAKE_COMMAND}" -E make_directory "${CSPOT_INCLUDE_DIR}"
  COMMAND "${CBINDGEN_EXECUTABLE}" --config "${CSPOT_SOURCE_DIR}/cbindgen.toml" --crate cspot --output "${CSPOT_INCLUDE_DIR}/cspot.h"
  COMMAND ${CSPOT_CARGO_BUILD_CMD}
  DEPENDS ${CSPOT_HEADER_DEPENDS}
  WORKING_DIRECTORY "${CSPOT_SOURCE_DIR}"
  COMMENT "Generating cspot header and building libcspot"
  VERBATIM
  USES_TERMINAL
)
add_custom_target(cspot_prebuild DEPENDS
  "${CSPOT_INCLUDE_DIR}/cspot.h"
  "${CSPOT_LIBRARY_OUTPUT}"
  "${CSPOT_STATIC_LIBRARY_OUTPUT}"
)

add_library(librespot::cspot STATIC IMPORTED GLOBAL)
set_target_properties(librespot::cspot PROPERTIES
  IMPORTED_CONFIGURATIONS "Debug;Release;RelWithDebInfo;MinSizeRel"
  IMPORTED_LOCATION_DEBUG "${CSPOT_STATIC_LIBRARY_DEBUG}"
  IMPORTED_LOCATION_RELEASE "${CSPOT_STATIC_LIBRARY_RELEASE}"
  IMPORTED_LOCATION_RELWITHDEBINFO "${CSPOT_STATIC_LIBRARY_RELEASE}"
  IMPORTED_LOCATION_MINSIZEREL "${CSPOT_STATIC_LIBRARY_RELEASE}"
  INTERFACE_INCLUDE_DIRECTORIES "${CSPOT_INCLUDE_DIR}"
)

install(FILES "${CSPOT_INCLUDE_DIR}/cspot.h" DESTINATION "${CSPOT_INSTALL_INCLUDE_DIR}")
install(FILES "${CSPOT_LIBRARY_DEBUG}" DESTINATION "${CSPOT_INSTALL_LIB_DIR}" CONFIGURATIONS Debug)
install(FILES "${CSPOT_LIBRARY_RELEASE}" DESTINATION "${CSPOT_INSTALL_LIB_DIR}" CONFIGURATIONS Release RelWithDebInfo MinSizeRel)
install(FILES "${CSPOT_STATIC_LIBRARY_DEBUG}" DESTINATION "${CSPOT_INSTALL_LIB_DIR}" CONFIGURATIONS Debug OPTIONAL)
install(FILES "${CSPOT_STATIC_LIBRARY_RELEASE}" DESTINATION "${CSPOT_INSTALL_LIB_DIR}" CONFIGURATIONS Release RelWithDebInfo MinSizeRel OPTIONAL)
