[package]
name = "cspot"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "C bindings for librespot (cspot)"
repository = "https://github.com/MJRasicci/cspot"

[lib]
name = "cspot"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["with-libmdns", "native-tls"]

# Propagate TLS/discovery/audio passthrough options down to librespot
native-tls = ["librespot/native-tls"]
rustls-tls-native-roots = ["librespot/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["librespot/rustls-tls-webpki-roots"]
with-libmdns = ["librespot/with-libmdns"]
with-avahi = ["librespot/with-avahi"]
with-dns-sd = ["librespot/with-dns-sd"]
passthrough-decoder = ["librespot/passthrough-decoder"]

[dependencies]
librespot = { path = "../librespot", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
log = "0.4"
data-encoding = "2.5"
sha1 = "0.10"
thiserror = "2"
once_cell = "1"
# Pin vergen to avoid pulling in 9.1+ which conflicts with vergen-lib 0.1.x used by vergen-gitcl.
vergen = "=9.0.6"

[dev-dependencies]
cbindgen = "0.27"
