cmake_minimum_required(VERSION 3.15)
project(android_client NONE)

if (NOT ANDROID)
  return()
endif()

if (NOT DEFINED CSPOT_INSTALL_SAMPLES_DIR)
  set(CSPOT_INSTALL_SAMPLES_DIR "samples")
endif()

if (NOT DEFINED CSPOT_CARGO_TARGET_DIR)
  set(CSPOT_CARGO_TARGET_DIR "${CMAKE_SOURCE_DIR}/artifacts/target")
endif()

if (NOT DEFINED CSPOT_CARGO_TARGET_TRIPLE OR CSPOT_CARGO_TARGET_TRIPLE STREQUAL "")
  message(FATAL_ERROR "android-client requires CSPOT_CARGO_TARGET_TRIPLE for Android builds")
endif()

if (CMAKE_BUILD_TYPE MATCHES "^(Release|RelWithDebInfo|MinSizeRel)$")
  set(CSPOT_ANDROID_CLIENT_VARIANT "release")
  set(CSPOT_ANDROID_CLIENT_PROFILE "release")
else()
  set(CSPOT_ANDROID_CLIENT_VARIANT "debug")
  set(CSPOT_ANDROID_CLIENT_PROFILE "debug")
endif()

set(CSPOT_ANDROID_CLIENT_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}")
set(CSPOT_ANDROID_CLIENT_STAGE_DIR
  "${CMAKE_SOURCE_DIR}/artifacts/android-client/${CMAKE_ANDROID_ARCH_ABI}"
)
set(CSPOT_ANDROID_CLIENT_APK_NAME
  "android-client-${CMAKE_ANDROID_ARCH_ABI}-${CSPOT_ANDROID_CLIENT_VARIANT}.apk"
)
set(CSPOT_ANDROID_CLIENT_APK_PATH
  "${CSPOT_ANDROID_CLIENT_STAGE_DIR}/${CSPOT_ANDROID_CLIENT_APK_NAME}"
)

set(CSPOT_ANDROID_CLIENT_LIB_DIR
  "${CSPOT_CARGO_TARGET_DIR}/${CSPOT_CARGO_TARGET_TRIPLE}/${CSPOT_ANDROID_CLIENT_PROFILE}"
)
set(CSPOT_ANDROID_CLIENT_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/c-bindings/include")

file(GLOB_RECURSE CSPOT_ANDROID_CLIENT_INPUTS CONFIGURE_DEPENDS
  "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}/app/*"
  "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}/scripts/*"
  "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}/*.gradle"
  "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}/*.properties"
  "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}/settings.gradle"
)

add_custom_command(
  OUTPUT "${CSPOT_ANDROID_CLIENT_APK_PATH}"
  COMMAND "${CMAKE_COMMAND}" -E make_directory "${CSPOT_ANDROID_CLIENT_STAGE_DIR}"
  COMMAND "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}/scripts/build-android-client.sh"
    --project-dir "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}"
    --abi "${CMAKE_ANDROID_ARCH_ABI}"
    --variant "${CSPOT_ANDROID_CLIENT_VARIANT}"
    --cspot-lib-dir "${CSPOT_ANDROID_CLIENT_LIB_DIR}"
    --cspot-include-dir "${CSPOT_ANDROID_CLIENT_INCLUDE_DIR}"
    --output-apk "${CSPOT_ANDROID_CLIENT_APK_PATH}"
  DEPENDS
    ${CSPOT_ANDROID_CLIENT_INPUTS}
    "${CSPOT_ANDROID_CLIENT_LIB_DIR}/libcspot.so"
    "${CSPOT_ANDROID_CLIENT_INCLUDE_DIR}/cspot.h"
  COMMENT "Building android-client APK (${CMAKE_ANDROID_ARCH_ABI} ${CSPOT_ANDROID_CLIENT_VARIANT})"
  VERBATIM
  USES_TERMINAL
)

add_custom_target(android_client ALL DEPENDS "${CSPOT_ANDROID_CLIENT_APK_PATH}")
if (TARGET cspot_prebuild)
  add_dependencies(android_client cspot_prebuild)
endif()

install(FILES "${CSPOT_ANDROID_CLIENT_APK_PATH}"
  DESTINATION "${CSPOT_INSTALL_SAMPLES_DIR}/android-client/apk/${CMAKE_ANDROID_ARCH_ABI}"
  OPTIONAL
)

install(DIRECTORY "${CSPOT_ANDROID_CLIENT_SOURCE_DIR}/"
  DESTINATION "${CSPOT_INSTALL_SAMPLES_DIR}/android-client/source"
  PATTERN ".gitignore" EXCLUDE
  PATTERN ".gradle" EXCLUDE
  PATTERN ".idea" EXCLUDE
  PATTERN ".cxx" EXCLUDE
  PATTERN "build" EXCLUDE
  PATTERN "app/build" EXCLUDE
  PATTERN "app/.cxx" EXCLUDE
  PATTERN "local.properties" EXCLUDE
)
